--- a/final-project-carlguo2/.gitignore
+++ b/final-project-carlguo2/.gitignore
@@ -261,3 +261,8 @@ __pycache__/
 *.pyc
 
 # Exclude some files that got through
+icon.rc
+final-project-carlguo.sln
+final-project-carlguo.vcxproj
+final-project-carlguo.vcxproj.filters
+slnx.sqlite
