changed git ignore

--- a/final-project-carlguo2/.gitignore
+++ b/final-project-carlguo2/.gitignore
@@ -265,4 +265,6 @@ icon.rc
 final-project-carlguo.sln
 final-project-carlguo.vcxproj
 final-project-carlguo.vcxproj.filters
-slnx.sqlite
+
+# Exclude vs folder
+.vs
