Starting to get most of the basic barebones game started. Will look very similar to source. Will try and edit it to make it more different later on.

--- a/final-project-carlguo2/final-project-carlguo2.vcxproj
+++ b/final-project-carlguo2/final-project-carlguo2.vcxproj
@@ -192,6 +192,7 @@
     <ClCompile Include="src\PlayerLife.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="catch.hpp" />
     <ClInclude Include="src\Bullet.h" />
     <ClInclude Include="src\Enemy.h" />
     <ClInclude Include="src\LevelController.h" />
