--- a/final-project-carlguo2/final-project-carlguo2.vcxproj.filters
+++ b/final-project-carlguo2/final-project-carlguo2.vcxproj.filters
@@ -173,7 +173,7 @@
     <ClInclude Include="src\PlayerLife.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="catch.hpp">
+    <ClInclude Include="test\catch.hpp">
       <Filter>test</Filter>
     </ClInclude>
   </ItemGroup>
