Updated my development.md

--- a/final-project-carlguo2/final-project-carlguo2.vcxproj.filters
+++ b/final-project-carlguo2/final-project-carlguo2.vcxproj.filters
@@ -185,4 +185,7 @@
     <None Include="src\README.md" />
     <None Include=".gitignore" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Development.txt" />
+  </ItemGroup>
 </Project>
