--- a/final-project-carlguo2/final-project-carlguo2.vcxproj
+++ b/final-project-carlguo2/final-project-carlguo2.vcxproj
@@ -237,6 +237,9 @@
     <None Include="src\PROPOSAL.md" />
     <None Include="src\README.md" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Development.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ProjectExtensions>
     <VisualStudio>
