--- a/final-project-carlguo2/final-project-carlguo2.vcxproj
+++ b/final-project-carlguo2/final-project-carlguo2.vcxproj
@@ -238,7 +238,7 @@
     <None Include="src\README.md" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="Development.txt" />
+    <Text Include="Development.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ProjectExtensions>
