Started implementing  a high score system. Not working completely though.

--- a/final-project-carlguo2/final-project-carlguo2.vcxproj.filters
+++ b/final-project-carlguo2/final-project-carlguo2.vcxproj.filters
@@ -181,9 +181,9 @@
     <ResourceCompile Include="icon.rc" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="src\PROPOSAL.md" />
-    <None Include="src\README.md" />
     <None Include=".gitignore" />
+    <None Include="PROPOSAL.md" />
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Development.md" />
