--- a/final-project-carlguo2/final-project-carlguo2.vcxproj.filters
+++ b/final-project-carlguo2/final-project-carlguo2.vcxproj.filters
@@ -61,6 +61,9 @@
     <ClCompile Include="oscCommunicator.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="collision_test.cpp">
+      <Filter>test</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="src">
